{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 78,
  "lineage": "d7e6941c-d4b8-1b82-01eb-2c0159afd9e0",
  "resources": [
    {
      "module": "module.TheEC2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "TheEC2_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0944e91aed79c721c",
            "arn": "arn:aws:ec2:us-west-2:376133810889:instance/i-0c3afb1c4968edffa",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 0,
                "tags": {
                  "name": "My EBS for My EC2"
                },
                "throughput": 0,
                "volume_id": "vol-06ef980d41a2b4533",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3afb1c4968edffa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TopLevel",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067e82c0b94f8f227",
            "private_dns": "ip-10-0-10-168.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ecd9856e5bd5b0c8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0352a6fa40315f627",
            "tags": {
              "name": "The App EC2 instance with EBS"
            },
            "tags_all": {
              "name": "The App EC2 instance with EBS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3ad15728e8990b4"
            ]
          },
          "dependencies": [
            "module.TheVPC.aws_subnet.TheVPC_Resource_Private_Subnet",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyEC2_SG_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:security-group/sg-07d35f630cf7f97a1",
            "description": "The security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d35f630cf7f97a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EC2-SG",
            "name_prefix": "",
            "owner_id": "376133810889",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Control SG Access EC2"
            },
            "tags_all": {
              "name": "Control SG Access EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07872e2e290191e22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SG_EC2_Inbound_Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-547037632",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07d35f630cf7f97a1",
            "security_group_rule_id": "sgr-0775172943db197e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheEC2-SG.aws_security_group.MyEC2_SG_Resource",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheEC2-SG",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "SG_EC2_Outbound_Rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4269008419",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07d35f630cf7f97a1",
            "security_group_rule_id": "sgr-0775172943db197e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.TheEC2-SG.aws_security_group.MyEC2_SG_Resource",
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TheVPC_Resource_Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:subnet/subnet-0352a6fa40315f627",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0352a6fa40315f627",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376133810889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07872e2e290191e22"
          },
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TheVPC_Resource_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:subnet/subnet-05a16ee20d03a3fee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a16ee20d03a3fee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376133810889",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07872e2e290191e22"
          },
          "dependencies": [
            "module.TheVPC.aws_vpc.TheVPC_Resource"
          ]
        }
      ]
    },
    {
      "module": "module.TheVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TheVPC_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:376133810889:vpc/vpc-07872e2e290191e22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074e7ed2b4efcb147",
            "default_route_table_id": "rtb-00216e439cdcd5834",
            "default_security_group_id": "sg-0a3ad15728e8990b4",
            "dhcp_options_id": "dopt-ed632495",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07872e2e290191e22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00216e439cdcd5834",
            "owner_id": "376133810889",
            "tags": {
              "name": "Prod VPC"
            },
            "tags_all": {
              "name": "Prod VPC"
            }
          }
        }
      ]
    }
  ]
}